--- a/src/components/ProductDetailInfo/styles.less
+++ b/src/components/ProductDetailInfo/styles.less
@@ -1,4 +1,16 @@
 .product-detail-info {
+  padding: 20px;
+  background-color: white;
+
+  h4 {
+    font-size: 1rem;
+  }
+
+  .price {
+    font-size: 1.5rem;
+    font-weight: 300;
+  }
+
   .btn {
     flex-direction: row;
 
