--- a/src/components/ProductItem/styles.less
+++ b/src/components/ProductItem/styles.less
@@ -8,9 +8,12 @@
   margin-top: 10px;
   overflow: hidden;
   height: 44px;
+  text-align: center;
 }
 .product-price {
-  margin-top: 10px;
+  margin-top: 5px;
   font-weight: 500;
   font-size: 1rem;
+  color: #c48c46;
+  text-align: center;
 }
