--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -1,6 +1,7 @@
 @import "~antd/dist/antd.less";
 
-@primary-color: #1890ff; // primary color for all components
+// @primary-color: #1890ff; // primary color for all components
+@primary-color: #915b01;
 @link-color: #1890ff; // link color
 @success-color: #52c41a; // success state color
 @warning-color: #faad14; // warning state color
