--- a/src/components/Layout/styles.less
+++ b/src/components/Layout/styles.less
@@ -24,25 +24,32 @@
   }
 
   .nav {
-    list-style: none;
-    padding: 0;
-    margin-top: 50px;
-
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 
-    li {
-      a {
-        font-weight: 300;
-        font-size: 1rem;
-        text-transform: uppercase;
-        color: @heading-color;
-        padding: 14px 0px;
-        margin: 0px 20px;
+    ul {
+      list-style: none;
+      padding: 0;
+      margin-top: 50px;
 
-        &:hover,
-        &.active {
-          border-bottom: solid 3px @heading-color;
+      display: flex;
+      flex-direction: row;
+
+      li {
+        a {
+          font-weight: 300;
+          font-size: 1rem;
+          text-transform: uppercase;
+          color: @heading-color;
+          padding: 14px 0px;
+          margin: 0px 20px;
+
+          &:hover,
+          &.active {
+            border-bottom: solid 3px @heading-color;
+          }
         }
       }
     }
