--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -19,3 +19,5 @@
 @font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI",
   "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+@price-color: #c48c46;
