--- a/src/components/ProductDetailInfo/styles.less
+++ b/src/components/ProductDetailInfo/styles.less
@@ -6,7 +6,15 @@
     font-size: 1rem;
   }
 
+  .rate {
+    margin-bottom: 10px;
+  }
+
+  .quantity {
+  }
+
   .price {
+    margin: 20px 0px;
     font-size: 1.5rem;
     font-weight: 300;
   }
@@ -16,6 +24,10 @@
 
     button {
       margin-right: 20px;
+    }
+
+    .buy-now {
+      width: 200px !important;
     }
   }
 }
