--- a/src/components/Image/styles.less
+++ b/src/components/Image/styles.less
@@ -1,14 +1,12 @@
-.image {
-  width: 100%;
-  height: 70%;
-  object-fit: contain;
+.m-image {
+  height: 100%;
 }
+
 .skeleton-image {
-  width: 100% !important;
-  height: 70% !important;
+  height: 100%;
+  overflow: hidden;
 
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f2f2f2;
 }
