--- a/src/components/Layout/styles.less
+++ b/src/components/Layout/styles.less
@@ -2,7 +2,7 @@
 
 .header {
   background-color: white;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 
   display: flex;
   justify-content: center;
@@ -27,28 +27,33 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+
+    margin-top: 50px;
 
     ul {
       list-style: none;
+      margin: 0;
       padding: 0;
-      margin-top: 50px;
 
       display: flex;
       flex-direction: row;
 
       li {
+        display: flex;
+        margin-right: 30px;
+
         a {
+          display: flex;
+          padding: 10px 0px;
+
           font-weight: 300;
           font-size: 1rem;
           text-transform: uppercase;
           color: @heading-color;
-          padding: 14px 0px;
-          margin: 0px 20px;
 
           &:hover,
           &.active {
-            border-bottom: solid 3px @heading-color;
+            border-bottom: solid 4px @heading-color;
           }
         }
       }
@@ -61,7 +66,7 @@
 }
 
 .footer {
-  margin-top: 10px;
+  margin-top: 20px;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -69,7 +74,7 @@
   align-items: center;
 
   .container {
-    margin-top: 80px;
+    margin-top: 50px;
     display: flex;
     flex-direction: row;
 
@@ -88,12 +93,14 @@
           font-size: 1rem;
           text-transform: uppercase;
         }
+        p {
+          margin-bottom: 8px;
+        }
       }
     }
 
     .social-network {
       width: 300px;
-      // background-color: gray;
     }
   }
 
