--- a/src/components/ProductItem/styles.less
+++ b/src/components/ProductItem/styles.less
@@ -3,17 +3,27 @@
 .product-item {
   width: 100%;
   height: 100%;
-}
-.product-name {
-  margin-top: 10px;
-  overflow: hidden;
-  height: 44px;
-  text-align: center;
-}
-.product-price {
-  margin-top: 5px;
-  font-weight: 500;
-  font-size: 1rem;
-  color: #c48c46;
-  text-align: center;
+
+  .image {
+    height: 70%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .name {
+    margin-top: 10px;
+    overflow: hidden;
+    height: 44px;
+    text-align: center;
+    font-weight: 300;
+  }
+
+  .price {
+    margin-top: 5px;
+    font-weight: 300;
+    font-size: 0.9rem;
+    color: #c48c46;
+    text-align: center;
+  }
 }
