--- a/src/components/ProductListSkeleton/styles.less
+++ b/src/components/ProductListSkeleton/styles.less
@@ -1,9 +1,13 @@
-.skeleton-image {
-  width: 100% !important;
-  height: 70% !important;
+.product-list-skeleton-image {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  display: flex !important;
-  justify-content: center !important;
-  align-items: center !important;
-  background-color: #f2f2f2;
+.product-list-skeleton-line {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
 }
