--- a/src/components/ProductImageSlider/styles.less
+++ b/src/components/ProductImageSlider/styles.less
@@ -1,4 +1,6 @@
+@import "../../styles/antd.less";
+
 .product-image-slider {
   height: 400px;
-  // border: solid 1px gray;
+  background-color: @border-color-base;
 }
