--- a/src/components/ProductDetailInfo/styles.less
+++ b/src/components/ProductDetailInfo/styles.less
@@ -10,6 +10,21 @@
     margin-bottom: 10px;
   }
 
+  .variant {
+    .variant-attribute {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      margin-bottom: 20px;
+
+      .label {
+        font-weight: 300;
+        font-size: 1rem;
+        width: 100px;
+      }
+    }
+  }
+
   .quantity {
   }
 
