--- a/src/styles/antd.less
+++ b/src/styles/antd.less
@@ -20,4 +20,4 @@
   "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
-@price-color: #c48c46;
+@price-color: #d7422d;
